can go to one room

--- a/cat-adventure.html
+++ b/cat-adventure.html
@@ -11,13 +11,13 @@
       <!-- this should update as Starbuck gains/loses escape points -->
       <div>Starbuck has 5 escape points</div>
       <!-- these options should update as she moves to/from different rooms -->
-      <div>
-        <span class="run">Run towards the dining room</span> 
-        <span class="look" id="dining-room">Look at the dining room</span>
+      <div class="room">
+        <span class="run" id="run-dining-room">Run towards the dining room</span>
+        <span class="look" id="run-dining-room">Look at the dining room</span>
       </div>
-      <div>
-        <span class="run">Run towards the living room</span>
-        <span class="look" id="living-room">Look at the living room</span>
+      <div class="room">
+        <span class="run" id="run-living-room">Run towards the living room</span>
+        <span class="look" id="look-living-room">Look at the living room</span>
       </div>
     </div>
   </body>
