adds ids on new children

--- a/cat-adventure.html
+++ b/cat-adventure.html
@@ -13,7 +13,7 @@
       <!-- these options should update as she moves to/from different rooms -->
       <div class="room">
         <span class="run" id="run-dining-room">Run towards the dining room</span>
-        <span class="look" id="run-dining-room">Look at the dining room</span>
+        <span class="look" id="look-dining-room">Look at the dining room</span>
       </div>
       <div class="room">
         <span class="run" id="run-living-room">Run towards the living room</span>
